charts/comfyui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  labels:
    app: comfyui
spec:
  type: LoadBalancer
  selector:
    app: comfyui
  ports:
  - port: 8188
    targetPort: 8188
    protocol: TCP
    name: http
